--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="header-content">
           <a href="#" class="logo">
-            <img src="/images/logo.png" alt="" />
+            <img src="images/logo.png" alt="" />
           </a>
           <nav>
             <ul>
