--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
       </div>
       <div class="row">
         <div class="mail-image2">
-          <img src="../images/2.jpge.avif" alt="" />
+          <img src=".
+  /images/2.jpge.avif" alt="" />
         </div>
 
         <div class="details2">
