--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="header-content">
           <a href="#" class="logo">
-            <img src="/images/logo.png" alt="" />
+            <img src="./images/logo.png" alt="" />
           </a>
           <nav>
             <ul>
@@ -153,12 +153,12 @@
           </div>
         </div>
         <div class="mail-image">
-          <img src="/images/meal1.jpg" alt="" />
+          <img src="./images/meal1.jpg" alt="" />
         </div>
       </div>
       <div class="row">
         <div class="mail-image2">
-          <img src="/images/2.jpge.avif" alt="" />
+          <img src="./images/2.jpge.avif" alt="" />
         </div>
 
         <div class="details2">
@@ -206,28 +206,28 @@
 
         <div class="pics">
           <div class="pic">
-            <img src="/images/pic1.jpg" alt="" srcset="" />
+            <img src="./images/pic1.jpg" alt="" srcset="" />
           </div>
           <div class="pic">
-            <img src="/images/pic2.jpg" alt="" srcset="" />
+            <img src="./images/pic2.jpg" alt="" srcset="" />
           </div>
           <div class="pic">
-            <img src="/images/pic3.jpg" alt="" srcset="" />
+            <img src="./images/pic3.jpg" alt="" srcset="" />
           </div>
           <div class="pic">
-            <img src="/images/pic4.jpg" alt="" srcset="" />
+            <img src="./images/pic4.jpg" alt="" srcset="" />
           </div>
           <div class="pic">
-            <img src="/images/pic5.jpg" alt="" srcset="" />
+            <img src="./images/pic5.jpg" alt="" srcset="" />
           </div>
           <div class="pic">
-            <img src="/images/pic6.jpg" alt="" srcset="" />
+            <img src="./images/pic6.jpg" alt="" srcset="" />
           </div>
           <div class="pic">
-            <img src="/images/pic7.jpg" alt="" srcset="" />
+            <img src="./images/pic7.jpg" alt="" srcset="" />
           </div>
           <div class="pic">
-            <img src="/images/pic8.jpg" alt="" srcset="" />
+            <img src="./images/pic8.jpg" alt="" srcset="" />
           </div>
         </div>
         <span class="add">MORE</span>
@@ -258,7 +258,7 @@
       </p>
       <div class="about-us-content">
         <div class="about-us-img">
-          <img src="/images/about-us-img.png" alt="" />
+          <img src="./images/about-us-img.png" alt="" />
         </div>
         <div class="numbers">
           <div class="background"></div>
@@ -303,7 +303,7 @@
             </p>
             <div class="chef">
               <div class="profile">
-                <img src="/images/profile1.png" alt="" />
+                <img src="./images/profile1.png" alt="" />
               </div>
               <div class="specifics">
                 <p>
@@ -317,7 +317,7 @@
             <div class="chef">
               <div class="profile">
                 <img
-                  src="/images/profile2.png"
+                  src="./images/profile2.png"
                   alt=""
                   width="317"
                   height="317"
@@ -506,7 +506,7 @@
 
     <!-- start footer -->
     <footer>
-      <img src="/images/logo.png" alt="">
+      <img src="./images/logo.png" alt="">
       <p>WE ARE SOCIAL</p>
       <hr>
       <div class="socials">
